# build-24-langchain-vcore

./: .env.example  .gitignore  .pre-commit-config.yaml  CBD_Mongo_vCore.ipynb  CONTRIBUTING.md  README.md  azure.yaml  example.env  helper.ipynb  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: azure-dev-validation.yaml  devcontainer-ci.yaml  frontend-ci.yaml  python-lint-format.yaml  python-static-analysis.yaml  python-unit-test.yaml
app/: pyproject.toml  start.sh
app/backend/: README.md  app.py  config.py  main.py  requirements.txt
app/backend/approaches/: base.py  rag.py  setup.py  utils.py  vector.py
app/frontend/: .prettierrc.json  README.md  package-lock.json  package.json  vite.config.ts
app/frontend/src/: index.tsx
app/frontend/src/api/: api.ts  models.ts
app/frontend/src/components/AnalysisPanel/: AnalysisPanel.tsx  AnalysisPanelTabs.tsx
app/frontend/src/components/Answer/: Answer.tsx  AnswerLoading.tsx  AnswerParser.tsx
app/frontend/src/components/Example/: ExampleList.tsx
data/: fooditems.json  output.json  output_data.json
frontend/src/components/BuyModal/: BuyModal.tsx
frontend/src/components/Example/: ExampleList.tsx
frontend/src/pages/chat/: Chat.tsx
frontend/src/pages/layout/: Layout.tsx
src/: entrypoint.sh  pyproject.toml  requirements.txt
src/data/: food_items.json
src/quartapp/: app.py  config.py
src/quartapp/approaches/: base.py  rag.py  schemas.py  setup.py  utils.py  vector.py
src/scripts/: add_data.py
tests/: conftest.py  test_app_endpoints.py  test_approaches.py  test_config.py
(+9 files in other folders)
